// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> --json 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> --scriptFriendly 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> -s 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as service account using cli args frodo info <host> --sa-id <sa-id> --sa-jwk-file <sa-jwk-file> 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account frodo-test [b672336b-41ef-428d-ae4a-e0c082875377]

Host URL            │https://openam-frodo-dev.forgeblocks.com/am                                      
AM Version          │7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)
Subject (Type)      │frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)              
Deployment Type     │cloud                                                                            
Cookie Name         │6ac6499e9da2071                                                                  
Immutable           │false                                                                            
Locked              │false                                                                            
Region              │us-central1                                                                      
Tier                │other                                                                            
                    │                                                                                 
  promotionTierInfo │                                                                                 
     tierDisplayName│other                                                                            
upperTierDisplayName│                                                                                 
lowerTierDisplayName│                                                                                 
                    │                                                                                 
    tiers           │                                                                                 
                   0│other                                                                            

Bearer token:
<access token>
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info --json 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info --scriptFriendly 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info -s 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "bearerToken": "<access token>",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as service account using env vars frodo info 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as service account frodo-test [b672336b-41ef-428d-ae4a-e0c082875377]

Host URL            │https://openam-frodo-dev.forgeblocks.com/am                                      
AM Version          │7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)
Subject (Type)      │frodo-test [b672336b-41ef-428d-ae4a-e0c082875377] (Service Account)              
Deployment Type     │cloud                                                                            
Cookie Name         │6ac6499e9da2071                                                                  
Immutable           │false                                                                            
Locked              │false                                                                            
Region              │us-central1                                                                      
Tier                │other                                                                            
                    │                                                                                 
  promotionTierInfo │                                                                                 
     tierDisplayName│other                                                                            
upperTierDisplayName│                                                                                 
lowerTierDisplayName│                                                                                 
                    │                                                                                 
    tiers           │                                                                                 
                   0│other                                                                            

Bearer token:
<access token>
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> --json 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "volker.scheuber@forgerock.com (User)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "sessionToken": "MHA64HUj_aJNQWXhqkdOngxIK-I.*AAJTSQACMDIAAlNLABxOVGFkMFRqVlRycG1qWnljR3hKOUxXNk5LcWs9AAR0eXBlAANDVFMAAlMxAAIwMQ..*",
  "bearerToken": "eyJ0eXAiOiJKV1QiLCJraWQiOiJob0tZU0FMdEM3NHlkOUg0K0tBdHhTbkZzcXc9IiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiI4ZWZhYTViNi04Yzk4LTQ0ODktOWIyMS1lZTQxZjU1ODlhYjciLCJjdHMiOiJPQVVUSDJfU1RBVEVMRVNTX0dSQU5UIiwiYXV0aF9sZXZlbCI6MCwiYXVkaXRUcmFja2luZ0lkIjoiZjI5NjMxMGUtMTBmMS00NWQ3LWE4NDMtZTZmZTNkY2YzMGY0LTI5NTQ2NDUiLCJzdWJuYW1lIjoiOGVmYWE1YjYtOGM5OC00NDg5LTliMjEtZWU0MWY1NTg5YWI3IiwiaXNzIjoiaHR0cHM6Ly9vcGVuYW0tZnJvZG8tZGV2LmZvcmdlYmxvY2tzLmNvbTo0NDMvYW0vb2F1dGgyIiwidG9rZW5OYW1lIjoiYWNjZXNzX3Rva2VuIiwidG9rZW5fdHlwZSI6IkJlYXJlciIsImF1dGhHcmFudElkIjoiVFBVZGw3aHphNnhPSkFJRG5acWotdUFpbW5VIiwiYXVkIjoiaWRtQWRtaW5DbGllbnQiLCJuYmYiOjE2ODczMDk4NzEsImdyYW50X3R5cGUiOiJhdXRob3JpemF0aW9uX2NvZGUiLCJzY29wZSI6WyJvcGVuaWQiLCJmcjppZGM6ZXN2OioiLCJmcjppZG06KiJdLCJhdXRoX3RpbWUiOjE2ODczMDk4NzAsInJlYWxtIjoiLyIsImV4cCI6MTY4NzMxMzQ3MSwiaWF0IjoxNjg3MzA5ODcxLCJleHBpcmVzX2luIjozNjAwLCJqdGkiOiJjMXhDeHRuQ2tnOWh1MFFZVDNzUmtsZmpRekUifQ.UsrW3Ds_vAYB-ji-VWvxbAPnJkbHbiX9whkTMZK6wQOtf4YKhwFLgF3jYL2Im932600oVwHjiZHhevj_sXhZkHq6MG4iX_C6ZATIpRFDC_fXK834SLAVBzZjh03lgVYI2pkcpQDi280TTbYcrpOWXB4fX8AulkjnEc2Bc-Y2hElHd4HddFL17fpAIYRDppOUWdFJbRTUWjSUanPdMxrzx-hEosYCC8X0fiKKwqI5SaaQi9QulaSYM1_9Qdah9_p9zuWCsUUIz6evunK0R1lFu4sFv-FB-WNvEQNhVasUAuWKfPbk_8pd9g5MIUaOYEv3UXsGLg7lHy3c01iRb1v41w",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "config_promotion_done": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> --scriptFriendly 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "volker.scheuber@forgerock.com (User)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "sessionToken": "9vlaR5zHZCrjWPcrAgE2okf3zHU.*AAJTSQACMDIAAlNLABxlUE5ndTZwTUo2R1poMVFEYnJwUTllQXBqLzg9AAR0eXBlAANDVFMAAlMxAAIwMQ..*",
  "bearerToken": "eyJ0eXAiOiJKV1QiLCJraWQiOiJob0tZU0FMdEM3NHlkOUg0K0tBdHhTbkZzcXc9IiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiI4ZWZhYTViNi04Yzk4LTQ0ODktOWIyMS1lZTQxZjU1ODlhYjciLCJjdHMiOiJPQVVUSDJfU1RBVEVMRVNTX0dSQU5UIiwiYXV0aF9sZXZlbCI6MCwiYXVkaXRUcmFja2luZ0lkIjoiZjI5NjMxMGUtMTBmMS00NWQ3LWE4NDMtZTZmZTNkY2YzMGY0LTI5NTQ5MjMiLCJzdWJuYW1lIjoiOGVmYWE1YjYtOGM5OC00NDg5LTliMjEtZWU0MWY1NTg5YWI3IiwiaXNzIjoiaHR0cHM6Ly9vcGVuYW0tZnJvZG8tZGV2LmZvcmdlYmxvY2tzLmNvbTo0NDMvYW0vb2F1dGgyIiwidG9rZW5OYW1lIjoiYWNjZXNzX3Rva2VuIiwidG9rZW5fdHlwZSI6IkJlYXJlciIsImF1dGhHcmFudElkIjoiU2NDTnRuOUVKV3ljdHh5LVM0Q0dDNF9KMDc4IiwiYXVkIjoiaWRtQWRtaW5DbGllbnQiLCJuYmYiOjE2ODczMDk4ODcsImdyYW50X3R5cGUiOiJhdXRob3JpemF0aW9uX2NvZGUiLCJzY29wZSI6WyJvcGVuaWQiLCJmcjppZGM6ZXN2OioiLCJmcjppZG06KiJdLCJhdXRoX3RpbWUiOjE2ODczMDk4ODcsInJlYWxtIjoiLyIsImV4cCI6MTY4NzMxMzQ4NywiaWF0IjoxNjg3MzA5ODg3LCJleHBpcmVzX2luIjozNjAwLCJqdGkiOiJjdlNaai1YbEVvSklVVHIxdTJGdTNtdURBMDQifQ.RCAO2iLQE6JCtSYQ2orkrKx0SyVADgRZY8s5e38wa4Z6BCnnldL6EVzNsMatHlNryPYSoZ12wHwazqObbDYmE4FQu17MvkYY84iwxmF4mhKzTujwrL25JLLkfWYPyLywUyX6qU2MxEVrKPzWq3SGyMFSFQrP1e6rPrteQ7rFiBqFDZNrQ9xAiNHVH8xeCPsheJWCqEuqQIyfIHA3x8p_mltxuguVSTyYSX-Hv7ZWhEfLxhv6oFlplQPsxbncaSR-eOtHByQtwsKvDMGfoQQCEkem4Moa8Ajpp1hNuMNASjR86Y1UY-F3OVWb_0mZWWIqZCLRzrznxkTceI58sHeGQA",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "config_promotion_done": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> -s 1`] = `
"{
  "host": "https://openam-frodo-dev.forgeblocks.com/am",
  "amVersion": "7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)",
  "authenticatedSubject": "volker.scheuber@forgerock.com (User)",
  "deploymentType": "cloud",
  "cookieName": "6ac6499e9da2071",
  "sessionToken": "hi5dqz4p3nasUbX4SdLXyQxzqC4.*AAJTSQACMDIAAlNLABwzV05xMGM1bFQyMGhoenZLSnJCTmZoQnE4K1k9AAR0eXBlAANDVFMAAlMxAAIwMQ..*",
  "bearerToken": "eyJ0eXAiOiJKV1QiLCJraWQiOiJob0tZU0FMdEM3NHlkOUg0K0tBdHhTbkZzcXc9IiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiI4ZWZhYTViNi04Yzk4LTQ0ODktOWIyMS1lZTQxZjU1ODlhYjciLCJjdHMiOiJPQVVUSDJfU1RBVEVMRVNTX0dSQU5UIiwiYXV0aF9sZXZlbCI6MCwiYXVkaXRUcmFja2luZ0lkIjoiZjI5NjMxMGUtMTBmMS00NWQ3LWE4NDMtZTZmZTNkY2YzMGY0LTI5NTYwMTQiLCJzdWJuYW1lIjoiOGVmYWE1YjYtOGM5OC00NDg5LTliMjEtZWU0MWY1NTg5YWI3IiwiaXNzIjoiaHR0cHM6Ly9vcGVuYW0tZnJvZG8tZGV2LmZvcmdlYmxvY2tzLmNvbTo0NDMvYW0vb2F1dGgyIiwidG9rZW5OYW1lIjoiYWNjZXNzX3Rva2VuIiwidG9rZW5fdHlwZSI6IkJlYXJlciIsImF1dGhHcmFudElkIjoibjNNbE1FcHlYNTFpMnY0UkFVRnF1Q00tNGh3IiwiYXVkIjoiaWRtQWRtaW5DbGllbnQiLCJuYmYiOjE2ODczMDk5MDQsImdyYW50X3R5cGUiOiJhdXRob3JpemF0aW9uX2NvZGUiLCJzY29wZSI6WyJvcGVuaWQiLCJmcjppZGM6ZXN2OioiLCJmcjppZG06KiJdLCJhdXRoX3RpbWUiOjE2ODczMDk5MDQsInJlYWxtIjoiLyIsImV4cCI6MTY4NzMxMzUwNCwiaWF0IjoxNjg3MzA5OTA0LCJleHBpcmVzX2luIjozNjAwLCJqdGkiOiJFV2p6bE5yaDRta01LOTBSVkZDSHN4YzV4bjAifQ.P2rPfBWRb1xRQFwii-XctPOSVy_fTBW6Kjmm4d3IkFdswTZ9l3YzLUkn2GdtoDCtlM6PVq_p1ktoUJ8fmuft09WuhRp8n7I8GffZrnKRwVdxP__9uIp6bFO5ra2Oe-K1ibkFUaFm8iRcSJD8silGMhZTrMQSeW8d5tvLaUVUwqkbBDnScgRXHh1H6Dt8HR6vDeUHlMNJYHVprUrRt-983PgBzXEoQhbPF7jgWqESmVfBS07r3cM23HLJhAG7-I8sCmxnhvEI0vyfbE-PleKaRd4wtpp-pdJByKRcrBAO5ezr96EhCCE3-jd15mwPRuPQf5jrNQmqNEkzWnvGm-pM-w",
  "immutable": false,
  "locked": false,
  "region": "us-central1",
  "tier": "other",
  "config_promotion_done": false,
  "placeholder_management": "CUSTOMER",
  "promotionTierInfo": {
    "tierDisplayName": "other",
    "tiers": [
      "other"
    ],
    "upperTierDisplayName": null,
    "lowerTierDisplayName": null
  }
}
"
`;

exports[`frodo info Authenticate as user frodo info <host> <user> <pass> 1`] = `
"Connected to https://openam-frodo-dev.forgeblocks.com/am [alpha] as user volker.scheuber@forgerock.com

Host URL              │https://openam-frodo-dev.forgeblocks.com/am                                      
AM Version            │7.4.0-SNAPSHOT Build cb5c9d0995369298fbd943c2a71df3dc85da6cba (2023-May-30 09:53)
Subject (Type)        │volker.scheuber@forgerock.com (User)                                             
Deployment Type       │cloud                                                                            
Cookie Name           │6ac6499e9da2071                                                                  
Immutable             │false                                                                            
Locked                │false                                                                            
Region                │us-central1                                                                      
Tier                  │other                                                                            
Promotion Done        │false                                                                            
Placeholder Management│CUSTOMER                                                                         
                      │                                                                                 
  promotionTierInfo   │                                                                                 
       tierDisplayName│other                                                                            
  upperTierDisplayName│                                                                                 
  lowerTierDisplayName│                                                                                 
                      │                                                                                 
    tiers             │                                                                                 
                     0│other                                                                            

Session token:
57X_mfKtsTJXuOINxAdr4BvwukE.*AAJTSQACMDIAAlNLABx1ME5PQnIwTytSNGM1NDNEaWVjeWN5ajFhY2M9AAR0eXBlAANDVFMAAlMxAAIwMQ..*

Bearer token:
eyJ0eXAiOiJKV1QiLCJraWQiOiJob0tZU0FMdEM3NHlkOUg0K0tBdHhTbkZzcXc9IiwiYWxnIjoiUlMyNTYifQ.eyJzdWIiOiI4ZWZhYTViNi04Yzk4LTQ0ODktOWIyMS1lZTQxZjU1ODlhYjciLCJjdHMiOiJPQVVUSDJfU1RBVEVMRVNTX0dSQU5UIiwiYXV0aF9sZXZlbCI6MCwiYXVkaXRUcmFja2luZ0lkIjoiZjI5NjMxMGUtMTBmMS00NWQ3LWE4NDMtZTZmZTNkY2YzMGY0LTI5NTQ1MDMiLCJzdWJuYW1lIjoiOGVmYWE1YjYtOGM5OC00NDg5LTliMjEtZWU0MWY1NTg5YWI3IiwiaXNzIjoiaHR0cHM6Ly9vcGVuYW0tZnJvZG8tZGV2LmZvcmdlYmxvY2tzLmNvbTo0NDMvYW0vb2F1dGgyIiwidG9rZW5OYW1lIjoiYWNjZXNzX3Rva2VuIiwidG9rZW5fdHlwZSI6IkJlYXJlciIsImF1dGhHcmFudElkIjoiZVVPX3FZZ3ZxSktKMTUwMVAtX1NxOHllcTI4IiwiYXVkIjoiaWRtQWRtaW5DbGllbnQiLCJuYmYiOjE2ODczMDk4NTQsImdyYW50X3R5cGUiOiJhdXRob3JpemF0aW9uX2NvZGUiLCJzY29wZSI6WyJvcGVuaWQiLCJmcjppZGM6ZXN2OioiLCJmcjppZG06KiJdLCJhdXRoX3RpbWUiOjE2ODczMDk4NTQsInJlYWxtIjoiLyIsImV4cCI6MTY4NzMxMzQ1NCwiaWF0IjoxNjg3MzA5ODU0LCJleHBpcmVzX2luIjozNjAwLCJqdGkiOiJxSDBHOU90YjFkei1fRGtXUk83SV9jQlgxTEkifQ.k8yAk4iU5L8yfoMzns0YJKHD95yesFE5-vx-kK-NImJEDY1nQe5VrxNOn_oBhyXG3t3aUA5_4T_1z_moqkc7rnjbreatpWyzl5aBagk_8Zqk4qjBXj_60ZqJwcL8UoEGLCMQakWuLOPZ_8Px32i2p29JCW3u40B7JEsg1S53tnr-NGscJE7vfDGhQB1PnWyGG0YNu57V6b4TImC2Iv_oK3FCMD6iTJ00p0lFhvC_vG0OkXo_SUPfpKZ_0ogJu1kaxyOJY8Q8skmeOH-Vo7gVvjThjWjgFwvorVq1kvFmIa5jkwnpu70tWEDvnipG2SXP5x_Uyb7SYuYQSd6E-ESyhQ
"
`;
